Be faster when all KNS categories fail at once (i.e. when you are offline)

BUG: 454442


(cherry picked from commit 91a7b6357e93b7f7bbad2d31cec59dbc8e688d39)